fix bug on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -10,6 +10,7 @@
 
     .contact-form .form-control {
         padding: 15px;
+        font-size: 16px;
     }
 
     .contact-info {
@@ -28,7 +29,7 @@
         margin: 0 8px;
     }
 
-    #footer .copyright a{
+    #footer .copyright a {
         padding: 12px 0;
         display: inline-block;
     }
@@ -36,7 +37,6 @@
 
 /* Tablet */
 @media (min-width: 740px) and (max-width: 1023px) {
-
 }
 
 /* Mobile */
@@ -97,4 +97,7 @@
         margin-top: 32px;
     }
 
+    .contact-submit-btn {
+        font-size: 18px;
+    }
 }
