--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@
     margin-top: 15px;
     border: none;
     text-align: center;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
